# othello_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: board.cpp  board.h  const.h  game.cpp  game.h  main.cpp  utils.cpp  utils.h
src/agent/: base.h  dqn.cpp  dqn.h  human.cpp  human.h  model.cpp  model.h
src/param/: base.cpp  base.h  tensor2d.cpp  tensor2d.h
src/utils/: buffer.h  experience.h
